<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MatchScore"
    >
<LinearLayout
    android:background="@drawable/stadium1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/teams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:padding="16dp"
        >
        <LinearLayout
            android:id="@+id/team1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/name1_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/score1_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="48sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:gravity="center"
                />
            <Button
                android:id="@+id/add_goal1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Goal"
                android:textSize="28sp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textStyle="bold"
                android:onClick="AddGoal1"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                />
            <Button
                android:id="@+id/add_shot1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Shot"
                android:textSize="28sp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textStyle="bold"
                android:onClick="AddShot1"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                />
            <Button
                android:id="@+id/add_shotontarget1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ShotOnTarget"
                android:textSize="17sp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textStyle="bold"
                android:onClick="AddShotOnTarger1"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                />
            <Button
                android:id="@+id/add_foul1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Foul"
                android:textSize="24sp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textStyle="bold"
                android:onClick="AddFoul1"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                />
            <Button
                android:id="@+id/add_yellow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/YellowCard"
                android:textSize="20sp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textStyle="bold"
                android:onClick="AddYellowCard1"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                />
            <Button
                android:id="@+id/add_red1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RedCard"
                android:textSize="24sp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textStyle="bold"
                android:onClick="AddRedCard1"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                />
            <Button
                android:id="@+id/add_offside1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Offside"
                android:textSize="24sp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textStyle="bold"
                android:onClick="AddOffside1"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Vs"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/name2_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/score2_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="48sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:gravity="center"
                />
            <Button
                android:id="@+id/add_goal2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Goal"
                android:textSize="28sp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textStyle="bold"
                android:onClick="AddGoal2"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                />
            <Button
                android:id="@+id/add_shot2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Shot"
                android:textSize="28sp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textStyle="bold"
                android:onClick="AddShot2"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                />
            <Button
                android:id="@+id/add_shotontarget2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ShotOnTarget"
                android:textSize="17sp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textStyle="bold"
                android:onClick="AddShotOnTarger2"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                />
            <Button
                android:id="@+id/add_foul2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Foul"
                android:textSize="24sp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textStyle="bold"
                android:onClick="AddFoul2"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                />
            <Button
                android:id="@+id/add_yellow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/YellowCard"
                android:textSize="20sp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textStyle="bold"
                android:onClick="AddYellowCard2"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                />
            <Button
                android:id="@+id/add_red2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RedCard"
                android:textSize="24sp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textStyle="bold"
                android:onClick="AddRedCard2"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                />
            <Button
                android:id="@+id/add_offside2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Offside"
                android:textSize="24sp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textStyle="bold"
                android:onClick="AddOffside2"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EndMatch"
        android:layout_gravity="center"
        android:background="@drawable/rounded"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="GetSTATS"
        android:textColor="@android:color/white"
        android:padding="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        />

</LinearLayout>
</ScrollView>